data/derived/comb/progs/unify/prog6536.ml.out
Characters 248-249:
  |Thresh(a,b,a_less,b_less)->0;;
                              ^
Error: This expression has type int but an expression was expected of type
         float
